--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,12 +10,12 @@ variables:
 steps:
 - script: |
     dotnet build --configuration $(buildConfiguration)
-#    dotnet test dotnetcore-tests --configuration $(buildConfiguration) --logger trx
+    dotnet test dotnetcore-tests --configuration $(buildConfiguration) --logger trx
     dotnet publish --configuration $(buildConfiguration) --output $BUILD_ARTIFACTSTAGINGDIRECTORY
-#- task: PublishTestResults@2
-#  condition: succeededOrFailed()
-#  inputs:
-#    testRunner: VSTest
-#    testResultsFiles: '**/*.trx'
+- task: PublishTestResults@2
+  condition: succeededOrFailed()
+  inputs:
+    testRunner: VSTest
+    testResultsFiles: '**/*.trx'
 
 - task: PublishBuildArtifacts@1
