Adding nuget packaging

--- a/src/DocumentDBRepo/DocumentDBRepo.csproj
+++ b/src/DocumentDBRepo/DocumentDBRepo.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>John Taylor</Authors>
+    <PackageProjectUrl>https://github.com/JohnLTaylor/DocumentDBRepo</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
