--- a/samples/DocDbRepo.Sample/DocDbRepo.Sample.csproj
+++ b/samples/DocDbRepo.Sample/DocDbRepo.Sample.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\DocumentDBRepo\DocumentDBRepo.csproj" />
+    <ProjectReference Include="..\..\src\DocDbRepo\DocDbRepo.csproj" />
   </ItemGroup>
 
   <ItemGroup>
