--- a/samples/CosmosDbRepository.Sample/CosmosDbRepository.Sample.csproj
+++ b/samples/CosmosDbRepository.Sample/CosmosDbRepository.Sample.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\DocDbRepo\DocDbRepo.csproj" />
+    <ProjectReference Include="..\..\src\CosmosDbRepository\CosmosDbRepository.csproj" />
   </ItemGroup>
 
   <ItemGroup>
