--- a/src/CosmosDbRepository/CosmosDbRepository.csproj
+++ b/src/CosmosDbRepository/CosmosDbRepository.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CosmosDbRepository.Types\CosmosDbRepository.Types.csproj" />
+  </ItemGroup>
+
 </Project>
