Add .net 2.2 to Travis CL

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ install:
         - sudo apt-get install nunit-console
 script:
         - xbuild ./CosmosDbRepository.sln
+        - find -iname "CosmosDbRepositoryTest.dll"
         - nunit-console ./test/CosmosDbRepositoryTest/bin/Debug/CosmosDbRepositoryTest.dll
