--- a/src/CosmosDbRepository/CosmosDbRepository.csproj
+++ b/src/CosmosDbRepository/CosmosDbRepository.csproj
@@ -7,6 +7,7 @@
     <PackageProjectUrl>https://github.com/JohnLTaylor/DocumentDBRepo</PackageProjectUrl>
     <AssemblyName>CosmosDbRepository</AssemblyName>
     <RootNamespace>CosmosDbRepository</RootNamespace>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
