--- a/src/CosmosDbRepository.Types/CosmosDbRepository.Types.csproj
+++ b/src/CosmosDbRepository.Types/CosmosDbRepository.Types.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>CosmosDbRepository.Types</RootNamespace>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>John Taylor</Authors>
+    <PackageProjectUrl>https://github.com/JohnLTaylor/DocumentDBRepo</PackageProjectUrl>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
