Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,14 +29,14 @@ steps:
   inputs:
     SourceFolder: 'src/'
     Contents: '**/*.nupkg'
-  condition: and(succeededOrFailed(), ne(variables['Build.Reason'], 'PullRequest'))
+  condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
 
 - task: DotNetCoreCLI@2
   displayName: 'Build All Projects (master)'
   inputs:
     projects: 'src/**/*.csproj'
     arguments: '--configuration $(BuildConfiguration)'
-  condition: and(succeededOrFailed(), ne(variables['Build.Reason'], 'PullRequest'), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+  condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
 
 
 #- script: |
@@ -60,7 +60,7 @@ steps:
     publishFeedCredentials: 'Nuget'
     packagesToPush: 'src/**/*.nupkg'
     allowPackageConflicts: true
-  condition: and(succeededOrFailed(), ne(variables['Build.Reason'], 'PullRequest'))
+  condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
 
 #- task: NuGetCommand@2
 #  inputs:
