Adding debug symbols

--- a/src/CosmosDbRepository.Types/CosmosDbRepository.Types.csproj
+++ b/src/CosmosDbRepository.Types/CosmosDbRepository.Types.csproj
@@ -11,6 +11,11 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>                                                                                                                                                    
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
