--- a/src/CosmosDbRepository.Substitute/CosmosDbRepository.Substitute.csproj
+++ b/src/CosmosDbRepository.Substitute/CosmosDbRepository.Substitute.csproj
@@ -10,6 +10,11 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup> 
+
   <ItemGroup>
     <ProjectReference Include="..\CosmosDbRepository\CosmosDbRepository.csproj" />
   </ItemGroup>
