--- a/src/CosmosDbRepository/CosmosDbRepository.csproj
+++ b/src/CosmosDbRepository/CosmosDbRepository.csproj
@@ -12,6 +12,11 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>                                                                                                                                                    
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.2.1" />
   </ItemGroup>
