--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
 #  condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
 - task: NuGetToolInstaller@0
   inputs:
-    checkLatest: true # Optional
+    versionSpec: '5.1.0' 
     
 - task: DotNetCoreCLI@2
   displayName: 'Build All Projects (master)'
